# GL-Checks

./: .gitignore  CMakeLists.txt  README.md
shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.h
